syntax = "proto3";

package auth;

option go_package = "github.com/malytinKonstantin/go-messenger-mono/proto/auth-service";

service AuthService {
  rpc Authenticate(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}